# cpals-rust

./: .gitignore  Cargo.toml  TODO
src/: convert.rs  lib.rs  main.rs  md4.rs  set1.rs  set2.rs  set3.rs  set4.rs  set5.rs  sha1.rs  tests.rs  util.rs
src/tests/: mod.rs  set1.rs  set2.rs  set3.rs  set4.rs  set5.rs
